feat: update website name

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/gomall.svg" />
+    <link rel="apple-touch-icon" href="/gomall-192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue + TS</title>
+    <meta name="description" content="GoMall - 现代化的电商购物平台" />
+    <title>GoMall</title>
   </head>
   <body>
     <div id="app"></div>
